menu list added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>My Hover Aniimations</title>
 </head>
 <body>
-    
+
+    <div class="container">
+        
+
+        <div class="menu-list">      <!---copy snippet from My Portfolio-->
+
+            <ul>
+                <li><a href="#">Home</a></li>            <!---turn Menu items to links-->
+                <li><a href="#">My Works</a></li> 
+                <li><a href="#">My Clients</a></li> 
+                <li><a href="#">Contact Me</a></li> 
+            </ul>
+        </div>
+
+
+
+
+
+    </div>
+
+
+
+
+
 </body>
 </html>
