--- a/index.html
+++ b/index.html
@@ -21,11 +21,22 @@
             </ul>
         </div>
 
+        <hr>
 
+        <div class="gallery">
 
+            <div class="gallery-item">
+                <img src="images/aloe.jpeg" alt="Image 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/cacti.webp" alt="Image 2">
+            </div> 
+            <div class="gallery-item">
+                <img src="images/Gallery.jpg" alt="Image 3">
+            </div> 
+        </div> 
 
-
-    </div>
+    </div> <!-- Closing tag for container -->       
 
 
 
