--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>My Hover Aniimations</title>
+    <title>My Hover Animations</title>
 </head>
 <body>
 
@@ -35,6 +35,49 @@
                 <img src="images/Gallery.jpg" alt="Image 3">
             </div> 
         </div> 
+
+        <hr>
+
+        <div class="profile-details">
+            <button>Check my works</button>
+        </div>
+
+        <hr>
+
+        <div class="contact-form">
+            <form action="#">
+                <div class="label">
+                    <label for="name">Name</label>
+                </div>
+
+                <div class="form-input">
+                    <input type="text" id="name" required>
+                </div>
+
+                <div class="label">
+                    <label for="email">Email</label>
+                </div>
+
+                <div class="form-input">
+                    <input type="email" id="email" required>
+                </div>
+
+                <div class="label">
+                    <label for="message">Message</label>
+                </div>
+                <div class="text-area">
+                    <textarea name="message" id="message" rows="15" requred></textarea>
+                </div>
+
+                <div class="btn-form">
+                    <button type="submit">Send it</button>
+                </div>
+
+
+            </form>
+
+
+        </div>
 
     </div> <!-- Closing tag for container -->       
 
